nginx/nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: nginx
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: nginx-2
      port: 7000
      targetPort: 7000
    - name: pgadmin
      port: 8000
      targetPort: 8000
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: ingress-nginx
