nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: app
spec:
  rules:
  - http:
      paths:
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 7777
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8888
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: postgre-svc
            port:
              number: 8080
